samples/_failures_safe/1761616908_05488c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96301d0c.c: In function ‘main’:
./samples/SAFE/__tmp_96301d0c.c:152:5: error: expected expression at end of input
  152 |     if (
      |     ^~
./samples/SAFE/__tmp_96301d0c.c:152:5: error: expected declaration or statement at end of input
